# causal-inference-studies

./: .gitattributes  .gitignore  404.html  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
ab_testing/: index.html
all_notebooks/: index.html
association_vs_causation/: index.html
attribution/: index.html
cates/: index.html
causal_assumptions/: index.html
causal_discovery/: index.html
causal_effects/: index.html
causal_questions/: index.html
confounders/: index.html
confounders_contd/: index.html
css/: style.css
dags/: index.html
dags_2/: index.html
dags_contd/: index.html
dags_with_math/: index.html
ddml/: index.html
feature_selection/: index.html
identification/: index.html
learners/: index.html
markdowns/: association_vs_causation.md  causal_effects.md  causal_questions.md  confounders.md  dags.md  index.md  software_packages.md  style.css  why_causality_matters.md
material/: ab_testing.md  all_notebooks.md  association_vs_causation.md  attribution.md  cates.md  causal_assumptions.md  causal_discovery.md  causal_effects.md  causal_questions.md  confounders.md  confounders_contd.md  dags.md  dags_2.md  dags_contd.md  dags_with_math.md  ddml.md  feature_selection.md  identification.md  index.md  learners.md  notebooks.md  observational_data_how_confounded.md  potential_outcomes.md  probability_refresher.md  propensity_scores.md  randomized_data_why_and_how.md  resources.md  shapley_contd.md  shapley_values.md  simpsons_paradox.md  software_packages.md  when_regression_goes_wrong.md  (+2 more)
(+45 files in other folders)
